<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B363C"
    tools:context=".CarImageActivity">

    <TextView
        android:id="@+id/car_img_title"
        style="@style/titleHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_identify_car_image_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/car_img1"
        style="@style/carImageHolder"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imageView_random_car_image_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_img_title"
        app:srcCompat="@drawable/car_audi_1" />

    <ImageView
        android:id="@+id/car_img2"
        style="@style/carImageHolder"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imageView_random_car_image_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_img1"
        app:srcCompat="@drawable/car_audi_1" />

    <ImageView
        android:id="@+id/car_img3"
        style="@style/carImageHolder"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imageView_random_car_image_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_img2"
        app:srcCompat="@drawable/car_audi_1" />

    <Button
        android:id="@+id/identify_btn"
        style="@style/submitButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_identify_text_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_img3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textView_car_maker"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/identify_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_img3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/answer_prompter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="#232C32"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_btn">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/correct_answer_gif"
            android:layout_width="125dp"
            android:layout_height="165dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="-5dp"
            android:src="@drawable/correct_gif"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="167dp"
            android:layout_marginTop="10dp"
            android:text="@string/textView_correct_text"
            android:textColor="#289995"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="168dp"
            android:layout_marginTop="68dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/correct_car_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginTop="82dp"
            android:text="@string/textView_car_maker_text"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/correct_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginTop="106dp"
            android:text="@string/textView_correct_car_maker"
            android:textColor="#FFC107"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>